rendered/envs/alpha/vmks/ingressroute-vmui-lan.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  name: vmui-lan
spec:
  entryPoints:
    - lan-web
    - lan-websecure
  routes:
    - kind: Rule
      match: Host(`vmui.lan.zebradil.dev`) || Host(`vmui.junior.lan.zebradil.dev`) || Host(`vmui.zebradil.dev`) || Host(`vmui.junior.zebradil.dev`)
      middlewares:
        - name: vmui-alias-redirect
      services:
        - name: vmselect-vmks-long
          port: http
